<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">


            <TextView
                style="@style/label_title"
                android:paddingLeft="0dp"
                android:text="Address" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblAddress"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtAddress"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_address"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:maxLength="@integer/max_address_all"
                    tools:text="@string/long_text" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                style="@style/floating_label_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/label_city" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spnCity"
                style="@style/polis_text_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_singleLine" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblPhone"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal">

                <EditText
                    android:id="@+id/txtPhone"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/digits"
                    android:hint="@string/label_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="20"
                    tools:text="53127744"

                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblMobile"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal">

                <EditText
                    android:id="@+id/txtMobile"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/digits"
                    android:hint="@string/label_mobile"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="20"
                    tools:text="081244557788" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
