<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.CustomerIndividuFragment">


    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

            <TextView
                style="@style/label_title"
                android:text="Profile" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblFullName"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtFullName"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_full_name_nama_lengkap"
                    android:maxLength="200"
                    tools:text="test" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblDOB"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/txtDOB"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/label_date_of_birth"
                    android:inputType="none"
                    tools:text="01 Dec 2016" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblPassport"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/txtPassport"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_passport_no"
                    android:maxLength="50"
                    tools:text="B 123 bb" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblKTP"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small">

                <EditText
                    android:id="@+id/txtKTP"
                    style="@style/polis_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_identity_no"
                    android:maxLength="50"
                    tools:text="123123123" />
            </android.support.design.widget.TextInputLayout>


            <TextView
                style="@style/floating_label_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_citizen"
                android:layout_marginTop="@dimen/spacing_small" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spnCitizen"
                style="@style/polis_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include layout="@layout/layout_space" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
