<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.FillFlightDetailFragment">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/viewScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/viewButtonFooter">

        <android.support.v7.widget.CardView
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@drawable/divider_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:id="@+id/lblSubhead"
                    style="@style/label_title"
                    android:paddingLeft="0dp"
                    android:text="Fill Flight" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblFlightNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtFlightNo"
                        style="@style/MyEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_flight_no"
                        android:maxLength="20" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/lblDepartureDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal">


                        <EditText
                            android:id="@+id/txtDepartureDate"
                            style="@style/MyEditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/label_pick_date"
                            android:inputType="none" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal">

                    <EditText
                        android:id="@+id/txtFrom"
                        style="@style/MyEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_from"
                        android:inputType="textCapCharacters|textMultiLine"
                        android:maxLength="100" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lblTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal">

                    <EditText
                        android:id="@+id/txtTo"
                        style="@style/MyEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_to"
                        android:inputType="textCapCharacters|textMultiLine"
                        android:maxLength="100" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/layout_footer_button_ok" />

</RelativeLayout>
